--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="col-3">
     <app-sidebar></app-sidebar>
   </div>
-  <div class="col">
+  <div class="col-9">
     <h2>
       <router-outlet></router-outlet>
     </h2>
