--- a/src/app/pais/pages/por-region/por-region.component.html
+++ b/src/app/pais/pages/por-region/por-region.component.html
@@ -1,30 +1,30 @@
-<h3>Buscar por región <small>{{regionActiva| titlecase}}</small></h3>
-<hr>
-<h5> Seleccione la region </h5>
-<div class="row">
+<div class="animate__animated animate__fadeIn animate__faster">
+  <h3>Buscar por región <small>{{regionActiva| titlecase}}</small></h3>
+  <hr>
+  <h5> Seleccione la region </h5>
+  <div class="row">
     <div class="col">
-        <!-- [class.btn-primary] = "region === regionActiva" -->
-        <!-- [ngClass]="{ 
+      <!-- [class.btn-primary] = "region === regionActiva" -->
+      <!-- [ngClass]="{ 
             'btn-primary':regionActiva === region,
             'btn-outline-primary':regionActiva !== region
           }"-->
 
-        <button  *ngFor="let region of regiones" 
-                  [class]="getClassCSS(region)"
-                  (click)="activarRegion(region)"
-                  (click)="buscar(region)"
-                  >
-            {{region|titlecase}}
-        </button>
+      <button *ngFor="let region of regiones" [class]="getClassCSS(region)" (click)="activarRegion(region)"
+        (click)="buscar(region)">
+        {{region|titlecase}}
+      </button>
     </div>
+  </div>
 </div>
+
 
 <div class="row">
   <hr>
   <div *ngIf="hayError" class="alert alert-danger">
     No se encontro información con {{termino}}.
   </div>
-  
+
   <div *ngIf="paises.length > 0" lass="row">
     <div class="col">
       <app-pais-tabla [paises]="paises"></app-pais-tabla>
