--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -8,6 +8,15 @@
       </app-pais-input>
     </div>
   </div>
+
+  <ul class="list-group">
+    <li *ngFor="let pais of paisesSugeridos" class="list-group-item list-group-item-action">
+      <a [routerLink]="['/pais',pais.alpha2Code]">
+        {{pais.name}}
+      </a>
+    </li>
+  </ul>
+
   <hr>
 </div>
 
